--- a/assets/shorts_open/open.html
+++ b/assets/shorts_open/open.html
@@ -19,13 +19,15 @@
           <h1 class="title">ANTI YT SHORTS - β</h1>
           <h2 class="slim">によってショート動画をブロックしています</h2>
         </div>
-        <p class="desc">このリンクはこちらの動画です</p>
+        <p class="desc">このリンクの動画はこちらから視聴できます</p>
         <div id="open-short-embed">
-          <iframe src="https://www.youtube.com/embed/eC50VLZQgZ4"></iframe>
+          
         </div>
         <a href="https://www.youtube.com"><p>youtube</p></a>
     </div>
     </main>
   </div>
+  
+    <script src="open.js"></script>
 </body>
 </html>
