--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,31 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="popup.css">
-  <title>ANTI YT SHORTS</title>
-</head>
-<body>
-  <div class="popup">
-    <header class="header">
-      <img src="../assets/icons/icon48.png" alt="logo" class="logo">
-      <h1 class="title">ANTI YT SHORTS - β</h1>
-    </header>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<link rel="stylesheet" href="popup.css" />
+		<title>ANTI YT SHORTS</title>
+	</head>
+	<body>
+		<div class="popup">
+			<header class="header">
+				<img src="../assets/icons/icon48.png" alt="logo" class="logo" />
+				<h1 class="title">ANTI YT SHORTS - β</h1>
+			</header>
 
-    <main class="main">
-      <div class="card">
-        <div class="row">
-          <div class="label">Shorts を非表示</div>
-          <label class="switch">
-            <input id="toggle" type="checkbox">
-            <span class="slider"></span>
-          </label>
-        </div>
-        <p class="desc">時間泥棒をブロックします</p>
-      </div>
-    </main>
-  </div>
-  <script src="popup.js"></script>
-</body>
+			<main class="main">
+				<div class="card">
+					<div class="row">
+						<div class="label">Shorts を非表示</div>
+						<label class="switch">
+							<input id="toggle" type="checkbox" />
+							<span class="slider"></span>
+						</label>
+					</div>
+					<p class="desc">時間泥棒をブロックします</p>
+				</div>
+			</main>
+		</div>
+		<script src="popup.js"></script>
+	</body>
 </html>
